ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: 'nginx'
  name: ingress
spec:
  rules:
    - host: itta.dev
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: itta-dev
                port:
                  number: 80
    - host: storage.itta.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-db-service
                port:
                  number: 9000
